--- a/world/uwsgi/.artixlinux/pkgbase.yaml
+++ b/world/uwsgi/.artixlinux/pkgbase.yaml
@@ -1,23 +1,4 @@
 ---
-pkgbase:
-  name: uwsgi
-  version: 2.0.29-4
-  arch:
-    - x86_64
-  pkgname:
-    - uwsgi
-    - uwsgi-plugin-rack
-    - uwsgi-plugin-psgi
-    - uwsgi-plugin-cgi
-    - uwsgi-plugin-python
-    - uwsgi-plugin-pypy
-    - uwsgi-plugin-php
-    - uwsgi-plugin-php-legacy
-    - uwsgi-plugin-lua51
-    - uwsgi-plugin-mono
-    - uwsgi-plugin-webdav
-    - uwsgi-plugin-zabbix
-    - uwsgi-plugin-notfound
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -30,50 +11,62 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.0.29-4
+    version: 2.0.30-1
     packages:
-      - uwsgi-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-rack-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-psgi-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-cgi-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-python-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-pypy-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-php-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-php-legacy-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-lua51-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-mono-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-webdav-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-zabbix-2.0.29-4-x86_64.pkg.tar.zst
-      - uwsgi-plugin-notfound-2.0.29-4-x86_64.pkg.tar.zst
+      - uwsgi-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-rack-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-psgi-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-cgi-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-python-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-pypy-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-php-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-php-legacy-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-lua51-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-mono-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-webdav-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-zabbix-2.0.30-1-x86_64.pkg.tar.zst
+      - uwsgi-plugin-notfound-2.0.30-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
