Updated xfce4-sensors-plugin - 1.5.0-2

--- a/galaxy/xfce4-sensors-plugin/PKGBUILD
+++ b/galaxy/xfce4-sensors-plugin/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=xfce4-sensors-plugin
 pkgver=1.5.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Sensors plugin for the Xfce panel"
 arch=('x86_64')
 url="https://docs.xfce.org/panel-plugins/xfce4-sensors-plugin/start"
@@ -20,6 +20,8 @@ sha256sums=('11185e845b5a52813b9a7610505384813eb4ad3cfe3c3e7aee5ce10d75b91468')
 
 build() {
   artix-meson $pkgname build \
+    -Dhddtemp=enabled \
+    -Dnetcat=enabled \
     --localstatedir=/var
   meson compile -C build
 }
