--- a/system/openrc/.artixlinux/pkgbase.yaml
+++ b/system/openrc/.artixlinux/pkgbase.yaml
@@ -17,9 +17,10 @@ repos:
     packages: []
     debug: []
   system:
-    version: 0.62.2-1
+    version: 0.62.3-2
     packages:
-      - openrc-0.62.2-1-x86_64.pkg.tar.zst
+      - openrc-0.62.3-2-x86_64.pkg.tar.zst
+      - libeinfo-0.62.3-2-x86_64.pkg.tar.zst
     debug: []
   world-goblins:
     version: null
