--- a/world/java-xmlgraphics-commons/.artixlinux/pkgbase.yaml
+++ b/world/java-xmlgraphics-commons/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: java-xmlgraphics-commons
-  version: 2.10-1
-  arch:
-    - any
-  pkgname:
-    - java-xmlgraphics-commons
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.10-1
+    version: 2.11-1
     packages:
-      - java-xmlgraphics-commons-2.10-1-any.pkg.tar.zst
+      - java-xmlgraphics-commons-2.11-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
