--- a/world/poppler/PKGBUILD
+++ b/world/poppler/PKGBUILD
@@ -4,8 +4,8 @@
 
 pkgbase=poppler
 pkgname=('poppler' 'poppler-glib' 'poppler-qt5' 'poppler-qt6')
-pkgver=25.05.0
-pkgrel=2
+pkgver=25.06.0
+pkgrel=1
 arch=(x86_64)
 license=('GPL-2.0-only'
          'GPL-3.0-or-later'
@@ -21,11 +21,11 @@ options=('!emptydirs')
 url="https://poppler.freedesktop.org/"
 # https://gitlab.freedesktop.org/poppler/poppler
 source=(https://poppler.freedesktop.org/${pkgbase}-${pkgver}.tar.xz{,.sig}
-        test::git+https://gitlab.freedesktop.org/poppler/test.git#commit=91ee031c882634c36f2f0f2f14eb6646dd542fb9
+        test::git+https://gitlab.freedesktop.org/poppler/test.git#commit=c79c6839e859dbee6b73ac260788fa2de8618ba4
 )
-sha256sums=('9b1627c5b76816ac5e4052a03f5b605ba40b45cf06b02cadd0479620b499ab38'
+sha256sums=('8199532d38984fab46dbd0020ec9c40f20e928e33e9b4cc6043572603a821d83'
             'SKIP'
-            '2f797eea1e904012d3c2d1c69ed92ac51e444bf7934447945fedd6c749fef4f2')
+            'b33c91e6f5ae8539f55b79a5b0ce27a51702fa45957c0a3a4dd695f7dcc497d7')
 validpgpkeys=('CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7') # Albert Astals Cid <aacid@kde.org>
 
 build() {
@@ -38,7 +38,7 @@ build() {
 }
 
 check() {
-  LANG=en_US.UTF8 ctest --test-dir build --output-on-failure ||:
+  LANG=en_US.UTF8 ctest --test-dir build --output-on-failure
 }
 
 package_poppler() {
