--- a/world/vagrant/.artixlinux/pkgbase.yaml
+++ b/world/vagrant/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-team: world
-pkgbase:
-  name: vagrant
-  version: 2.4.3-1
-  arch:
-    - x86_64
-  pkgname:
-    - vagrant
+team: galaxy
 actions:
-  addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  addRepo: galaxy
+  removeRepo: world
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.4.3-1
-    packages:
-      - vagrant-2.4.3-1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: null
-    packages: []
+    version: 2.4.3-1
+    packages:
+      - vagrant-2.4.3-1-x86_64.pkg.tar.zst
+    debug: []
