--- a/world/xsane/.artixlinux/pkgbase.yaml
+++ b/world/xsane/.artixlinux/pkgbase.yaml
@@ -1,56 +1,61 @@
 ---
-pkgbase:
-  name: xsane
-  version: 0.999-6
-  arch:
-    - x86_64
-  pkgname:
-    - xsane
-    - xsane-gimp
 actions:
-  addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  addRepo: galaxy
+  removeRepo: world
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
+    version: null
+    packages: []
+    debug: []
+  lib32-goblins:
+    version: null
+    packages: []
+    debug: []
+  lib32-gremlins:
+    version: null
+    packages: []
+    debug: []
+  lib32:
+    version: null
+    packages: []
+    debug: []
+  galaxy-goblins:
+    version: null
+    packages: []
+    debug: []
+  galaxy-gremlins:
+    version: null
+    packages: []
+    debug: []
+  galaxy:
     version: 0.999-6
     packages:
       - xsane-0.999-6-x86_64.pkg.tar.zst
       - xsane-gimp-0.999-6-x86_64.pkg.tar.zst
-  lib32-goblins:
-    version: null
-    packages: []
-  lib32-gremlins:
-    version: null
-    packages: []
-  lib32:
-    version: null
-    packages: []
-  galaxy-goblins:
-    version: null
-    packages: []
-  galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: null
-    packages: []
+    debug: []
+team: galaxy
