--- a/world/xcursor-vanilla-dmz/.artixlinux/pkgbase.yaml
+++ b/world/xcursor-vanilla-dmz/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: xcursor-vanilla-dmz
-  version: 0.4.5-3
-  arch:
-    - any
-  pkgname:
-    - xcursor-vanilla-dmz
-    - xcursor-vanilla-dmz-aa
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,53 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.4.5-3
+    version: 0.4.5.2-1
     packages:
-      - xcursor-vanilla-dmz-0.4.5-3-any.pkg.tar.zst
-      - xcursor-vanilla-dmz-aa-0.4.5-3-any.pkg.tar.zst
+      - xcursor-vanilla-dmz-0.4.5.2-1-any.pkg.tar.zst
+      - xcursor-vanilla-dmz-aa-0.4.5.2-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: null
-    packages: []
-team: world
+    version: 0.4.5.2-1
+    packages:
+      - xcursor-vanilla-dmz-0.4.5.2-1-any.pkg.tar.zst
+      - xcursor-vanilla-dmz-aa-0.4.5.2-1-any.pkg.tar.zst
+    debug: []
+team: galaxy
