--- a/galaxy/xcursor-vanilla-dmz/.artixlinux/pkgbase.yaml
+++ b/galaxy/xcursor-vanilla-dmz/.artixlinux/pkgbase.yaml
@@ -1,6 +1,6 @@
 ---
 actions:
-  addRepo: galaxy
+  addRepo: world
   removeRepo: null
   triggersBuild: true
   triggersRebuild: false
@@ -29,10 +29,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 0.4.5-3
+    version: 0.4.5.2-1
     packages:
-      - xcursor-vanilla-dmz-0.4.5-3-any.pkg.tar.zst
-      - xcursor-vanilla-dmz-aa-0.4.5-3-any.pkg.tar.zst
+      - xcursor-vanilla-dmz-0.4.5.2-1-any.pkg.tar.zst
+      - xcursor-vanilla-dmz-aa-0.4.5.2-1-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
@@ -60,4 +60,4 @@ repos:
       - xcursor-vanilla-dmz-0.4.5.2-1-any.pkg.tar.zst
       - xcursor-vanilla-dmz-aa-0.4.5.2-1-any.pkg.tar.zst
     debug: []
-team: world
+team: galaxy
