--- a/world/znc/PKGBUILD
+++ b/world/znc/PKGBUILD
@@ -1,12 +1,13 @@
-# Maintainer: Giancarlo Razzolini <grazzolini@archlinux.org>
-# Maintainer: Christian Heusel <gromit@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Giancarlo Razzolini <grazzolini@archlinux.org>
+# Contributor: Christian Heusel <gromit@archlinux.org>
 # Contributor: Sébastien Luttringer
 # Contributor: Kaiting Chen <kaitocracy@gmail.com>
 # Contributor: mickael9 <mickael9 at gmail dot com>
 
 pkgname=znc
-pkgver=1.9.1
-pkgrel=8
+pkgver=1.10.0
+pkgrel=1
 pkgdesc='An IRC bouncer with modules & scripts support'
 url='https://wiki.znc.in/'
 license=('Apache-2.0')
@@ -36,7 +37,7 @@ source=("https://znc.in/releases/archive/$pkgname-$pkgver.tar.gz"{,.sig}
         "$pkgname.tmpfiles"
         "$pkgname.sysusers")
 validpgpkeys=('D5823CACB477191CAC0075555AE420CC0209989E')  # Alexey Sokolov <alexey@asokolov.org>
-sha256sums=('e8a7cf80e19aad510b4e282eaf61b56bc30df88ea2e0f64fadcdd303c4894f3c'
+sha256sums=('be65ad9b62ef545a7e9486f2f74134edc53ba513ad43a69d9d8b476605336b19'
             'SKIP'
             '8cd1b5b011c706fea9dc0c70d4daa75a53bf0966d6e96a3fce3a541777aa2771'
             'bb79f73ce440f96d8250f59c8afc3b8dda5c7b4fe9cc190796393b994af1e3ca')
