--- a/world/python-openapi-spec-validator/PKGBUILD
+++ b/world/python-openapi-spec-validator/PKGBUILD
@@ -1,38 +1,41 @@
-# Maintainer: Chih-Hsuan Yen <yan12125@archlinux.org>
+# Maintainer: Carl Smedstad <carsme@archlinux.org>
+# Contributor: Chih-Hsuan Yen <yan12125@archlinux.org>
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=python-openapi-spec-validator
-# https://github.com/p1c2u/openapi-spec-validator/releases
-pkgver=0.7.1
-pkgrel=3
+pkgver=0.7.2
+pkgrel=1
 pkgdesc="OpenAPI 2.0 (aka Swagger) and OpenAPI 3 spec validator"
 url="https://github.com/p1c2u/openapi-spec-validator"
-license=('Apache')
+license=('Apache-2.0')
 arch=('any')
-depends=('python' 'python-jsonschema' 'python-openapi-schema-validator'
-         'python-jsonschema-path' 'python-lazy-object-proxy')
-makedepends=('python-build' 'python-installer' 'python-poetry-core')
+depends=(
+  'python'
+  'python-jsonschema'
+  'python-jsonschema-path'
+  'python-lazy-object-proxy'
+  'python-openapi-schema-validator'
+)
+makedepends=(
+  'python-build'
+  'python-installer'
+  'python-poetry-core'
+)
 checkdepends=('python-pytest')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/p1c2u/openapi-spec-validator/archive/$pkgver.tar.gz")
-sha512sums=('2a57ae1beb5f38f278839749f80cd92881bb57aa035573e604ee5fad5db6868150a9b4ebd1c00c20cc0fa00672619f5d99295de4df3173d25a841fe25c374c9d')
-
-prepare() {
-  cd openapi-spec-validator-$pkgver
-  sed -i '/--cov/d' pyproject.toml
-}
+source=("$url/archive/$pkgver/$pkgname-$pkgver.tar.gz")
+sha512sums=('8642c2d98baebe122e1ea56b960f73e6cc5ff2dd3c5f6d82362ef1846b4a1a79b652668d7b42277fc7062a0b84556f38dd0e7c53e5e791a88d11b6dd4711c898')
 
 build() {
-  cd openapi-spec-validator-$pkgver
+  cd ${pkgname#python-}-$pkgver
   python -m build --wheel --no-isolation
 }
 
 check() {
-  cd openapi-spec-validator-$pkgver
-  PYTHONPATH="$PWD" pytest
+  cd ${pkgname#python-}-$pkgver
+  PYTHONPATH="$PWD" pytest --override-ini="addopts="
 }
 
 package() {
-  cd openapi-spec-validator-$pkgver
+  cd ${pkgname#python-}-$pkgver
   python -m installer --destdir="$pkgdir" dist/*.whl
 }
-
