--- a/world/firewalld/.artixlinux/pkgbase.yaml
+++ b/world/firewalld/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: firewalld
-  version: 2.3.0-2
-  arch:
-    - any
-  pkgname:
-    - firewalld
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.3.0-2
+    version: 2.3.1-1
     packages:
-      - firewalld-2.3.0-2-any.pkg.tar.zst
+      - firewalld-2.3.1-1-any.pkg.tar.zst
+      - firewalld-test-2.3.1-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
